# epat-redirect-server

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  request_handling.rs  responses.rs
src/database/: Links.rs  connection.rs  mod.rs  open_graph.rs
src/macros/: attempt.rs  mod.rs
src/request_handling/responses/: internal_error.rs  invalid.rs  mod.rs  not_found.rs  redirect_trough_http302.rs  redirect_trough_javascript.rs
