[package]
name = "epat_redirect_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3.17"
lazy_static = "*"

#Database
#json support(must)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#date(must)
chrono = { version = "0.4", features = ["serde"] }

#log support(must)
log = "0.4"
fast_log="1.3"

#BigDecimal support(not must)
bigdecimal = "0.2"

#rbatis support(must)
rbatis =  { version = "2.0" }